--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "bootstrap": "^4.5.3",
     "hash-router": "^0.4.0",
     "node-sass": "^4.14.1",
+    "nuka-carousel": "^4.7.5",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-deck-swiper": "^1.0.9",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-popper": "^2.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-spring": "^8.0.27",
     "react-tinder-card": "^1.3.1",
+    "react-use-gesture": "^9.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
