--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "firebase": "^8.2.5",
     "hash-router": "^0.4.0",
     "node-sass": "^4.14.1",
     "nuka-carousel": "^4.7.5",
