--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "firebase": "^8.2.5",
     "hash-router": "^0.4.0",
     "node-sass": "^4.14.1",
-    "nuka-carousel": "^4.7.5",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-deck-swiper": "^1.0.9",
     "react-dom": "^17.0.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-icons": "^4.1.0",
     "react-popper": "^2.2.4",
     "react-router-dom": "^5.2.0",
