--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-spring": "^8.0.27",
     "react-tinder-card": "^1.3.1",
     "react-use-gesture": "^9.0.0",
+    "uuidv4": "^6.2.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
